If only sign of balance differs treat as OK

If only the sign of the balance differs between the online received
value and the one calculated by KMyMoney mark it as OK anyway.

BUG: 501815
FIXED-IN: 5.2